--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
   },
   "dependencies": {
     "next": "13.0.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
+    "polished": "^4.0.5",
+    "rc-drawer": "^4.2.1",
+    "rc-tabs": "^11.7.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-ga": "^3.3.0",
+    "react-icons": "^4.1.0",
+    "react-masonry-component": "^6.2.1",
+    "react-scroll": "^1.8.1",
+    "react-stickynode": "^3.0.4",
+    "swiper": "^6.4.5",
+    "theme-ui": "^0.3.5"
   },
   "devDependencies": {
     "@types/node": "18.11.5",
@@ -19,6 +31,10 @@
     "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^8.0.0",
+    "next-sitemap": "^1.4.5"
   }
 }
