--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@types/node": "18.11.5",
     "@types/react": "18.0.23",
     "@types/react-dom": "18.0.7",
+    "@types/react-scroll": "^1.8.4",
+    "@types/theme-ui": "^0.6.0",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
-    "typescript": "4.8.4",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^8.0.0",
-    "next-sitemap": "^1.4.5"
+    "next-sitemap": "^1.4.5",
+    "typescript": "4.8.4"
   }
 }
