--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   },
   "devDependencies": {
     "@types/node": "18.11.5",
-    "@types/react": "18.0.23",
-    "@types/react-dom": "18.0.7",
+    "@types/react": "^18.0.23",
+    "@types/react-dom": "^18.0.7",
     "@types/react-scroll": "^1.8.4",
+    "@types/react-stickynode": "^4.0.0",
     "@types/theme-ui": "^0.6.0",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
